Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rare/6665356/T6665356.out
T6665356.java:17:37: compiler.err.improperly.formed.type.param.missing
T6665356.java:18:40: compiler.err.improperly.formed.type.inner.raw.param
T6665356.java:26:22: compiler.err.improperly.formed.type.param.missing
T6665356.java:27:25: compiler.err.improperly.formed.type.inner.raw.param
4 errors
